dnl Originally based on the example in "Mono, A Developer's Notebook", pg. 234.
dnl
dnl Later modified according to the Mono project's guidelines;
dnl http://www.mono-project.com/Guidelines:Application_Deployment

AC_INIT(spamtrainer, 0.1.6, ashtong@users.sourceforge.net)
AC_CANONICAL_SYSTEM
AC_PREREQ(2.13)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AC_PROG_INSTALL

dnl pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
  AC_MSG_ERROR([You need to install pkg-config])
fi

dnl C# compiler
AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, mcs, no)
AC_PATH_PROG(MONO, mono, no)

CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno"  ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

if test "x$MONO" = "xno"; then
	AC_MSG_ERROR([No mono runtime found])
fi

AC_SUBST(MCS)

dnl gtk-sharp and friends
PKG_CHECK_MODULES(GTKSHARP, gconf-sharp-2.0 gtk-sharp-2.0 glade-sharp-2.0 gnome-sharp-2.0)
AC_SUBST(GTKSHARP_LIBS)

dnl GConf
AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

AC_SUBST(iconfile, spamtrainer.png)

AC_OUTPUT([
Makefile
data/Makefile
data/spamtrainer.desktop
resources/Makefile
src/AssemblyInfo.cs
src/Makefile
src/spamtrainer
])
